# qa-navigator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.sh  deploy.sh  pyproject.toml  setup.sh  smoke_test.py
.github/workflows/: qa-test.yml
docs/: architecture.md
qa_scripts/: PLAYBOOK.md
src/qa_navigator/: __init__.py  __main__.py  config.py  demo_runner.py
src/qa_navigator/accessibility/: __init__.py  auditor.py
src/qa_navigator/adapters/: __init__.py  base.py
src/qa_navigator/adapters/uia/: __init__.py  adapter.py
src/qa_navigator/adapters/vision/: __init__.py  detector.py  ocr.py  spatial.py
src/qa_navigator/adapters/win32/: __init__.py  adapter.py
src/qa_navigator/agents/: test_agent.py
src/qa_navigator/checklist/: __init__.py  generator.py  models.py
src/qa_navigator/ci/: runner.py
src/qa_navigator/computers/: __init__.py  playwright_computer.py  windows_computer.py  wine_computer.py
src/qa_navigator/framework/: __init__.py  detect.py  registry.py
src/qa_navigator/host_core/: __init__.py  capture.py  focus.py  windows.py
src/qa_navigator/host_core/input/: __init__.py  input_services.py  keyboard.py  mouse.py
src/qa_navigator/orchestrator/: __init__.py  engine.py  executor.py  progress.py
src/qa_navigator/report/: html.py
src/qa_navigator/scripts/: __init__.py  manager.py
src/qa_navigator/server/: __init__.py  app.py
src/qa_navigator/ui_selectors/: __init__.py  model.py
tests/: test_checklist_models.py
